# lab08-Messages-template

./: Affichage.h  Affichage.tpp  CMakeLists.txt  Email.cpp  Email.h  README.md  Tools.cpp  Tools.h  Toot.cpp  Toot.h  Tweet.cpp  Tweet.h  main.cpp
.github/: pull_request_template.md
Emails/: email1.txt  email2.txt  email_duplicate.txt  email_missing_1.txt  email_missing_2.txt
Toots/: Toot1.txt  Toot2.txt  Toot3.txt  Toot4.txt
Tweets/: tweet1.txt  tweet2.txt  tweet3.txt  tweet4.txt
emails/: email3.txt  email4.txt
